wordpress/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: wordpress
spec:
  to:
    kind: Service
    name: wordpress
    weight: 100
  port:
    targetPort: 8080
